--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <body>
     <h1>Выберите пункт доситавки</h1>
     <h2>Выберите способ доставки</h2>
+    <button>New button</button>
 </body>
 </html>
