cansel button added

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Выберите пункт доситавки</h1>
     <h2>Выберите способ доставки</h2>
     <button>New button</button>
+    <button>Cansel</button>
 </body>
 </html>
