--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Выберите пункт доситавки</h1>
     <button>New button</button>
     <button>Cansel</button>
+    <p>description</p>
 </body>
 </html>
