--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-<<<<<<< Updated upstream
-    
-=======
-    <h1>Выберите пункт доситавки</h1>
-    <button>New button</button>
->>>>>>> Stashed changes
+    <div>Новый контакт</div>
 </body>
 </html>
