2 new contacts added

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <body>
     <div>Новый контакт</div>
     <div>Новый контакт1</div>
+    <div>Новый контакт2</div>
+    <div>Новый контакт3</div>
 </body>
 </html>
