1 new contact added else

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div>Новый контакт1</div>
     <div>Новый контакт2</div>
     <div>Новый контакт3</div>
+    <div>Новый контакт4</div>
 </body>
 </html>
