--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <div>Новый контакт</div>
-    <div>Новый контакт1</div>
+    <h1>Нет контактов</h1>
 </body>
 </html>
