--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <div>Новый контакт2</div>
     <div>Новый контакт3</div>
     <div>Новый контакт4</div>
+    <div>Новый контакт5</div>
 </body>
 </html>
