--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <div>Новый контакт3</div>
     <div>Новый контакт4</div>
     <div>Новый контакт5</div>
+    <div>Новый контакт6</div>
 </body>
 </html>
