--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <div>Новый контакт4</div>
     <div>Новый контакт5</div>
     <div>Новый контакт6</div>
+    <div>Новый контакт7</div>
 </body>
 </html>
